--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                         <div class="home__picture">
                             <img src="./img/home/cosmonaut.png" alt="GLOBAL-космонавт" class="home__picture-img">
                         </div>
+                        <div class="home__line"></div>
                     </div>
                     <div class="home-navigate">
                         <ul class="home-navigate__list">
@@ -58,29 +59,33 @@
                 <div class="works__content">
                     <div class="works__title">Selected work</div>
                     <ul class="works__list">
-                        <a href="#" class="works__arrow selected-work__arrow_left"></a>
+                        <a href="#" class="works__arrow works__arrow_left"></a>
                         <li class="works__item">
-                            <img src="" alt="" class="works__item-img">
-                            <div class="works__item-content">
-                                <b>Victory</b>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed d</p>
-                            </div>
+                            <div class="works__item-img" style="background-image: url('./img/work/work-left.jpg')"></div>
+                            <div class="works__item-title">Victory</div>
+                            <!-- <div class="works__item-content">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed d
+                            </div> -->
+                        </li>
+                        <li class="works__item works__item_active">
+                            <div class="works__item-img" style="background-image: url('./img/work/work-center.jpg')"></div>
+                            <div class="works__item-title">Metiew & Smith</div>
+                            <!-- <div class="works__item-content">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed d
+                            </div> -->
                         </li>
                         <li class="works__item">
-                            <img src="" alt="" class="works__item-img">
-                            <div class="works__item-content">
-                                <b>Metiew & Smith</b>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed d</p>
-                            </div>
-                        <li class="works__item">
-                            <img src="" alt="" class="works__item-img">
-                            <div class="works__item-content">
-                                <b>Alex nowak</b>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed d</p>
-                            </div>
+                            <div class="works__item-img" style="background-image: url('./img/work/work-right.jpg')"></div>
+                            <div class="works__item-title">Alex Nowak</div>
+                            <!-- <div class="works__item-content">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed d
+                            </div> -->
                         </li>
-                        <a href="#" class="works__arrow selected-work__arrow_right"></a>
+                        <a href="#" class="works__arrow works__arrow_right"></a>
                     </ul>
+                    <div class="works__item-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed d
+                    </div>
                 </div>
             </section>
             <section class="section about">
@@ -91,18 +96,18 @@
                         <span class="about__link-arrow"></span>
                     </a>
                     <div class="about__picture">
-                        <img src="" alt="" class="about__picture-img">
+                        <img src="./img/about/about-visual.png" alt="GlOBAL-visual" class="about__picture-img">
                     </div>
                     <div class="about-navigate">
                         <ul class="about-navigate__list">
-                            <li class="about-navigate__item">
-                                <b>WINNERS</b>
+                            <li class="about-navigate__item" style="background-image: url('./img/about/about-winners.jpg');">
+                                <div class="about-navigate__item-text">WINNERS</div>
                             </li>
-                            <li class="about-navigate__item">
-                                <b>PHILOSOPHY</b>
+                            <li class="about-navigate__item" style="background-image: url('./img/about/about-philosophy.jpg');">
+                                <div class="about-navigate__item-text">PHILOSOPHY</div>
                             </li>
-                            <li class="about-navigate__item">
-                                <b>HISTORY</b>
+                            <li class="about-navigate__item" style="background-image: url('./img/about/about-history.jpg');">
+                                <div class="about-navigate__item-text">HISTORY</div>
                             </li>
                         </ul>
                     </div>
