--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
             </section>
             <section class="section contact">
-                <div class="map">
+                <div class="map" style=" background-image: url('./img/maps.png');">
                     <div class="contact__block">
                         <div class="contact__block-content">
                             <div class="contact__text">
