--- a/index.html
+++ b/index.html
@@ -233,61 +233,66 @@
                     <div class="order__title">You want us to do</div>
                     <form  action="server.php" method="post" name="order__form" class="order__form">
                         <ul class="order__list">
-                            <li class="order__item">
-                                <label class="order__label">
-                                    <input type="checkbox" class="order__checkbox">
-                                    <span class="order__link">
-                                        <span class="mdi mdi-check"></span>
-                                        App Design
-                                    </span>
-                                </label>
-                            </li>
-                            <li class="order__item"> 
-                                <label class="order__label">
-                                    <input type="checkbox" class="order__checkbox">
-                                    <span class="order__link">
-                                        <span class="mdi mdi-check"></span>
-                                        Graphic Design
-                                    </span>
-                                </label>
-                            </li>
-                            <li class="order__item"> 
-                                <label class="order__label">
-                                    <input type="checkbox" class="order__checkbox">
-                                    <span class="order__link">
-                                        <span class="mdi mdi-check"></span>
-                                        Motion Design
-                                    </span>
-                                </label>
-                            </li>
-                            <li class="order__item"> 
-                                <label class="order__label">
-                                    <input type="checkbox" class="order__checkbox">
-                                    <span class="order__link">
-                                        <span class="mdi mdi-check"></span>
-                                        UX Design
-                                    </span>
-                                </label>
-                            </li>
-                            <li class="order__item">
-                                <label class="order__label">
-                                    <input type="checkbox" class="order__checkbox">
-                                    <span class="order__link">
-                                        <span class="mdi mdi-check"></span>
-                                        Webdesign
-                                    </span>
-                                </label>
-                            </li>
+                            <div class="order__list-top">
+                                <li class="order__item">
+                                    <label class="order__label">
+                                        <input type="checkbox" class="order__checkbox">
+                                        <span class="order__link">
+                                            <span class="mdi mdi-check"></span>
+                                            App Design
+                                        </span>
+                                    </label>
+                                </li>
+                                <li class="order__item"> 
+                                    <label class="order__label">
+                                        <input type="checkbox" class="order__checkbox">
+                                        <span class="order__link">
+                                            <span class="mdi mdi-check"></span>
+                                            Graphic Design
+                                        </span>
+                                    </label>
+                                </li>
+                                <li class="order__item"> 
+                                    <label class="order__label">
+                                        <input type="checkbox" class="order__checkbox">
+                                        <span class="order__link">
+                                            <span class="mdi mdi-check"></span>
+                                            Motion Design
+                                        </span>
+                                    </label>
+                                </li>
+                            </div>
+                            <div class="order__list-bottom">
+                                <li class="order__item"> 
+                                    <label class="order__label">
+                                        <input type="checkbox" class="order__checkbox">
+                                        <span class="order__link">
+                                            <span class="mdi mdi-check"></span>
+                                            UX Design
+                                        </span>
+                                    </label>
+                                </li>
+                                <li class="order__item">
+                                    <label class="order__label">
+                                        <input type="checkbox" class="order__checkbox">
+                                        <span class="order__link">
+                                            <span class="mdi mdi-check"></span>
+                                            Webdesign
+                                        </span>
+                                    </label>
+                                </li>
+                                <li class="order__item">
+                                    <label class="order__label">
+                                        <input type="checkbox" class="order__checkbox">
+                                        <span class="order__link">
+                                            <span class="mdi mdi-check"></span>
+                                            Marketing
+                                        </span>
+                                    </label>
+                                </li>
+                            </div>
                         </ul>
-                        <div class="order__item order__item_margin">
-                            <label class="order__label">
-                                <input type="checkbox" class="order__checkbox">
-                                <span class="order__link">
-                                    <span class="mdi mdi-check"></span>
-                                    Marketing
-                                </span>
-                            </label>
-                        </div>
+                        
                         <div class="order__input-wrap">
                             <input type="text" id="" class="order__input" placeholder="Name">
                             <input type="text" id="" class="order__input order__input_email" placeholder="Email">
