--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             </div>
                         </a>
                         <div class="home__picture">
-                            <img src="./img/home/cosmonaut.png" alt="GLOBAL-космонавт" class="home__picture-img">
+                            <img src="./img/Home/cosmonaut.png" alt="GLOBAL-космонавт" class="home__picture-img">
                         </div>
                     </div>
                     <div class="home-navigate">
